--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
         <activity android:name=".app.ActivityDashboard" />
         <activity android:name=".app.ActivityForm" />
+        <activity android:name=".app.ActivityDetail"></activity>
     </application>
 
 </manifest>
