--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,8 @@
         <activity android:name=".app.ActivityDashboard" />
         <activity android:name=".app.ActivityForm" />
         <activity android:name=".app.ActivityDetail" />
-        <activity android:name=".ContactActivity" />
-        <activity android:name=".SuccesMessageActivity"></activity>
+        <activity android:name=".app.ActivityContact" />
+        <activity android:name=".app.ActivitySuccesMessage"></activity>
     </application>
 
 </manifest>
