--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ynov.informatiqueb2.lesbonnesaffairesdebibi">
+    package="com.ynov.lesbonnesaffairesdebibi">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -8,14 +11,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".ui.SplashActivity"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.BaseActivity" />
+        <activity android:name=".ui.ListActivity" />
+        <activity android:name=".ui.FavoritesActivity" />
+        <activity android:name=".ui.MyListActivity" />
+        <activity android:name=".ui.AddActivity" />
+        <activity android:name=".ui.LoginActivity" />
+        <activity android:name=".ui.DetailActivity" android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
