--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.myhexaville:smart-image-picker:1.0.4'
+    implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
 }
