Alors, comment te dire, j'ai passer ma sainte journée a faire un formulaire de contacte à la con. Ca a fini par marché, heureusement, l'api retourne toujours 201 :), enjoy with it

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
         <activity android:name=".UI.ChoiceActivity" />
         <activity android:name=".UI.IdentificationActivity" />
         <activity android:name=".UI.DeposerAnnonceActivity" />
-        <activity android:name=".UI.ConfirmationDeposerAnnonce"></activity>
+        <activity android:name=".UI.ConfirmationDeposerAnnonce" />
+        <activity android:name=".UI.ContacterVendeurActivity" />
+        <activity android:name=".UI.ConfirmationMessageActivity"></activity>
     </application>
 
 </manifest>
