--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.ynov.lesbonnesaffairesdebibi">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -27,7 +28,13 @@
         <activity android:name=".ui.MyListActivity" />
         <activity android:name=".ui.AddActivity" />
         <activity android:name=".ui.LoginActivity" />
-        <activity android:name=".ui.DetailActivity" android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".ui.DetailActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".ui.ContactActivity"
+            android:theme="@style/AppTheme">
+        </activity>
     </application>
 
 </manifest>
