--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+   packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+
+    }
 }
+
+
 
 dependencies {
 
@@ -27,4 +34,14 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
+    implementation 'org.apache.httpcomponents:httpcore:4.4.1'
+    api 'commons-httpclient:commons-httpclient:3.1'
+    implementation 'org.apache.commons:commons-lang3:3.5'
+
+    implementation'org.apache.httpcomponents:httpclient:4.5'
+    implementation'org.apache.httpcomponents:httpmime:4.5.5'
+
+
 }
+
+
