add project to branch

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ynov.informatiqueb2.lesbonnesaffairesdebibi">
+    package="com.example.oli.projetb2">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -9,13 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Ui.ListAdvertActivity" />
+        <activity android:name=".Ui.CreateAdvertActivity" />
+        <activity android:name=".Ui.AdvertCellActivity" />
+        <activity android:name=".Ui.ContactActivity" />
+        <activity android:name=".Ui.ConfirmationActivity"></activity>
     </application>
 
 </manifest>
