--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ynov.informatiqueb2.lesbonnesaffairesdebibi">
+    package="fr.lesbonnesaffairesdebibi.prjandroid">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ecommerce"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ecommerce"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Activity.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activity.ListAnnonceActivity" />
+        <activity android:name=".Activity.AnnonceDetailActivity" />
+        <activity android:name=".Activity.ReponseActivity" />
+        <activity android:name=".Activity.CreationAnnonceActivity" />
+        <activity android:name=".Activity.ListeFavorisActivity" />
+        <activity android:name=".Activity.IdentificationActivity" />
+        <activity android:name=".Activity.ListeAnnonceUtilisateurActivity" />
+        <activity android:name=".Activity.EditerAnnonceActivity" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
+
+        <activity android:name=".Activity.ReponseValideActivity"></activity>
     </application>
 
 </manifest>
