--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,13 +28,8 @@
         <activity android:name=".ui.MyListActivity" />
         <activity android:name=".ui.AddActivity" />
         <activity android:name=".ui.LoginActivity" />
-        <activity
-            android:name=".ui.DetailActivity"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".ui.ContactActivity"
-            android:theme="@style/AppTheme">
-        </activity>
+        <activity android:name=".ui.DetailActivity" />
+        <activity android:name=".ui.ContactActivity" />
     </application>
 
 </manifest>
