--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ynov.informatiqueb2.lesbonnesaffairesdebibi">
+    package="com.example.elesa.projet_lelt">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="LesBonnesAffairesDeBibi.fr"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Ui.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Ui.liste" />
+        <activity android:name=".Ui.listeCell" />
+        <activity android:name=".Ui.Detail" />
+        <activity android:name=".Ui.post" />
+        <activity android:name=".Ui.changeLog" />
+        <activity android:name=".Ui.listArticle" />
+        <activity android:name=".Ui.listArticleCell" />
+        <activity android:name=".Ui.DetailMyarticle"></activity>
     </application>
 
 </manifest>
