--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.elesa.projet_lelt">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -26,7 +26,10 @@
         <activity android:name=".Ui.changeLog" />
         <activity android:name=".Ui.listArticle" />
         <activity android:name=".Ui.listArticleCell" />
-        <activity android:name=".Ui.DetailMyarticle"></activity>
+        <activity android:name=".Ui.DetailMyarticle" />
+        <activity android:name=".Ui.Favoris" />
+        <activity android:name=".Ui.Contacter" />
+        <activity android:name=".Ui.Confirmation"></activity>
     </application>
 
 </manifest>
